# ChangeLog for sys-fs/lvm2
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/lvm2/ChangeLog,v 1.376 2015/05/29 05:25:23 jmorgan Exp $

  29 May 2015; Jack Morgan <jmorgan@gentoo.org> lvm2-2.02.109.ebuild:
  sparc stable wrt bug #493892

  18 Apr 2015; Pacho Ramos <pacho@gentoo.org> lvm2-2.02.109.ebuild:
  ppc64 stable wrt bug #493892

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> lvm2-2.02.109.ebuild:
  Stable for ppc, wrt bug #493892

  09 Jan 2015; Tobias Klausmann <klausman@gentoo.org> lvm2-2.02.109.ebuild:
  Stable on alpha, bug 493892

  21 Sep 2014; Markus Meier <maekke@gentoo.org> lvm2-2.02.109.ebuild:
  arm stable, bug #493892

  29 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> lvm2-2.02.110.ebuild:
  Enable use_lvmetad only if USE="udev" is enabled.

*lvm2-2.02.110 (29 Aug 2014)

  29 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +lvm2-2.02.110.ebuild:
  Version bump. Enable "use_lvmetad = 1" by default also for non-systemd users.

  27 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> lvm2-2.02.109.ebuild:
  Restrict old 2.02.109-r0 to old sys-apps/util-linux < 2.25 for USE="static"
  wrt #520450

*lvm2-2.02.109-r1 (27 Aug 2014)

  27 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> +lvm2-2.02.109-r1.ebuild:
  Revision bump for last correction in files/lvm2-2.02.106-pthread-
  pkgconfig.patch and to have ~arch version with REQUIRED_USE blocking usage of
  USE="static udev" wrt #520450.

  24 Aug 2014; Samuli Suominen <ssuominen@gentoo.org>
  files/lvm2-2.02.106-pthread-pkgconfig.patch:
  Restore @PTHREAD_LIBS@ to Libs.private: in devmapper.pc wrt #516224

  24 Aug 2014; Jeroen Roovers <jer@gentoo.org> lvm2-2.02.109.ebuild:
  Stable for HPPA (bug #493892).

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org> lvm2-2.02.109.ebuild:
  Fix building with USE="lvm1" wrt #520640 (caused by 1 missing char in
  configure script)

  22 Aug 2014; Samuli Suominen <ssuominen@gentoo.org>